--- a/style/produtos.css
+++ b/style/produtos.css
@@ -28,6 +28,11 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
+}
+
 .produto {
     width: 940px;
     margin: 0 auto;
@@ -42,6 +47,20 @@ nav a {
     margin: 0 1.5px;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+
+.produto li:hover {
+    border-color: #C78C19;
+}
+
+.produto li:active {
+    border-color: #088C19;    
+}
+
+.produto li:hover h2 {
+    font-size: 34px;
 }
 
 .produto h2 {
@@ -57,4 +76,16 @@ nav a {
 
 .produto-descricao {
     font-size: 20px;
+}
+
+footer {
+    text-align: center;
+    background: #000000;
+    padding: 40px 0;
+}
+
+footer p {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;
 }
