--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/* css da página de produto */
 header {
     background: #BBBBBB;
     padding: 20px 0;
@@ -90,6 +91,8 @@ footer p {
     margin: 20px 0 0;
 }
 
+/* css da página de contato*/
+
 form {
     width: 940px;
     margin: 40px auto;
@@ -167,3 +170,29 @@ td, th {
     padding: 8px 15px;
     text-align:  center;
 }
+
+/* css da página inicial */
+
+.banner {
+    width: 100%;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+}
+
+.principal p{
+    margin: 0 1em 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+
