--- a/style/style.css
+++ b/style/style.css
@@ -186,7 +186,14 @@ td, th {
     font-size: 2em;
     margin: 1em 0 1em;
     clear: left;
+}
 
+.principal {
+    width: 940px;
+    margin: 0 auto;
+    text-align: justify;
+    padding: 3em 0;
+    background: #FEFEFE;
 }
 
 .principal p{
@@ -206,4 +213,58 @@ td, th {
     float:  left;
     margin: 0 20px 0;
 }
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.servico {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo-servico {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-servico {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.itens:nth-child(4) {
+    font-weight: bold;
+}
+
+.imagem-servico {
+    width: 60%;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
+
 
