--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,106 @@
+/* css da página inicial */
+
+.banner {
+    width: 100%;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 1em 0 1em;
+    clear: left;
+}
+
+.principal {
+    width: 940px;
+    margin: 0 auto;
+    text-align: justify;
+    padding: 3em 0;
+    background: #FEFEFE;
+}
+
+.principal p{
+    margin: 0 1em 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 175px;
+    float:  left;
+    margin: 0 20px 0;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.servico {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo-servico {
+    width: 740px;
+    margin: 0 auto;
+}
+
+.lista-servico {
+    width: 35%;
+    display: inline-block;
+    vertical-align: top;
+    padding: 5px;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.itens:nth-child(4) {
+    font-weight: bold;
+}
+
+.itens:before {
+    content: "✃ ";
+}
+
+.imagem-servico {
+    width: 55%;
+    padding: 0 0 0 5px;
+    opacity: 0.3;
+    box-shadow: 10px 10px 5px black;
+}
+
+.imagem-servico:hover {
+    opacity: 0.7;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
 /* css da página de produto */
 body {
     font-family: 'Montserrat', sans-serif;
@@ -175,100 +278,4 @@ td, th {
     text-align:  center;
 }
 
-/* css da página inicial */
-
-.banner {
-    width: 100%;
-}
-
-.titulo-principal {
-    text-align: center;
-    font-size: 2em;
-    margin: 1em 0 1em;
-    clear: left;
-}
-
-.principal {
-    width: 940px;
-    margin: 0 auto;
-    text-align: justify;
-    padding: 3em 0;
-    background: #FEFEFE;
-}
-
-.principal p{
-    margin: 0 1em 1em;
-}
-
-.principal strong {
-    font-weight: bold;
-}
-
-.principal em {
-    font-style: italic;
-}
-
-.utensilios {
-    width: 175px;
-    float:  left;
-    margin: 0 20px 0;
-}
-
-.mapa {
-    padding: 3em 0;
-    background: linear-gradient(#FEFEFE, #888888);
-}
-
-.mapa p {
-    margin: 0 0 2em;
-    text-align: center;
-}
-
-.mapa-conteudo {
-    width: 940px;
-    margin: 0 auto;
-}
-
-.servico {
-    padding: 3em 0;
-    background: #888888;
-}
-
-.conteudo-servico {
-    width: 640px;
-    margin: 0 auto;
-}
-
-.lista-servico {
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.itens {
-    line-height: 1.5;
-}
-
-.itens:first-child {
-    font-weight: bold;
-}
-
-.itens:nth-child(4) {
-    font-weight: bold;
-}
-
-.itens:before {
-    content: "✃ ";
-}
-
-.imagem-servico {
-    width: 60%;
-}
-
-.video {
-    width: 560px;
-    margin: 2em auto;
-}
-
-
-
+/*CSS mobile */
