--- a/style/style.css
+++ b/style/style.css
@@ -98,6 +98,7 @@
 
 .video {
     width: 560px;
+    height: 315px;
     margin: 2em auto;
 }
 
@@ -278,4 +279,96 @@ td, th {
     text-align:  center;
 }
 
-/*CSS mobile */
+/* Media query */
+@media screen and (max-width: 768px) {
+
+.caixa {
+    width: 768px;
+    text-align:  center;
+}
+
+nav {
+    position: static;
+    padding: 0 auto;
+}
+
+nav a {
+    font-size: 20px;
+}
+
+.titulo-principal {
+    font-size: 1.5em;
+}
+
+.principal {
+    width: 750px;
+}
+
+.mapa-conteudo {
+    width: 750px;
+}
+
+@media screen and (max-width: 375px) {
+
+.caixa {
+    width: 375px;
+    text-align:  center;
+}
+
+nav {
+    position: static;
+    padding: 0 auto;
+}
+
+nav a {
+    font-size: 18px;
+}
+
+.titulo-principal {
+    font-size: 1.0em;
+}
+
+.principal {
+    width: 365px;
+}
+
+.mapa-conteudo {
+    width: 365px;
+}
+
+.conteudo-servico {
+    width:365px;
+    text-align: center;
+    font-size: 14px;
+}
+
+.lista-servico {
+    width: 90%;
+    padding: 10px;
+}
+
+.itens {
+    line-height: 1.3;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.itens:nth-child(4) {
+    font-weight: normal;
+}
+
+.imagem-servico {
+    width: 75%;
+    padding:10px;
+}
+
+.video {
+    width: 280px;
+    height: 157px;
+    margin: 1em auto;
+}
+
+
+}
